--- a/insatll_apache.yaml
+++ b/insatll_apache.yaml
@@ -1,20 +1,16 @@
 ---
+
 - name: config apache22 server
   hosts: aws
   tasks:
 
-  - name: update repo index
+
+  - name: install apache and php packages
     package:
+      name: 
+        - "{{ apache_package }}"
+        - "{{php_package}}"
+      state: latest
       update_cache: yes
 
 
-  - name: install apache2 server
-    apt:
-      name: apache2
-      state: latest
-
-
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
